--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatInvestigation.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatInvestigation.ui
@@ -122,7 +122,7 @@
    <item row="2" column="0" colspan="2" >
     <layout class="QHBoxLayout" name="horizontalLayout" >
      <item>
-      <widget class="QPushButton" name="pushButton" >
+      <widget class="QPushButton" name="helpButton" >
        <property name="text" >
         <string>Help</string>
        </property>
