--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
@@ -5,46 +5,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>781</width>
-    <height>570</height>
+    <width>750</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>ICatSearch</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" >
-   <item row="3" column="0" >
-    <layout class="QHBoxLayout" name="horizontalLayout" >
-     <item>
-      <widget class="QPushButton" name="helpButton" >
-       <property name="text" >
-        <string>Help</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_4" >
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0" >
-        <size>
-         <width>527</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="closeButton" >
-       <property name="text" >
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0" >
+   <item row="0" column="0" >
     <widget class="QTreeWidget" name="searchtreeWidget" >
      <property name="maximumSize" >
       <size>
@@ -53,7 +22,7 @@
       </size>
      </property>
      <property name="toolTip" >
-      <string>ICat Search Box</string>
+      <string/>
      </property>
      <property name="statusTip" >
       <string/>
@@ -63,12 +32,12 @@
      </property>
      <column>
       <property name="text" >
-       <string>                                                                                                                    Search Box</string>
+       <string>                                                                                                                   ISIS Search </string>
       </property>
      </column>
     </widget>
    </item>
-   <item row="0" column="0" >
+   <item row="1" column="0" >
     <widget class="QLabel" name="searchlabel" >
      <property name="frameShape" >
       <enum>QFrame::StyledPanel</enum>
@@ -107,101 +76,89 @@
      <property name="showGrid" >
       <bool>true</bool>
      </property>
-     <column>
-      <property name="text" >
-       <string>InvestigationId</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>RbNumber</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Title</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Type</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Instrument</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Investigator</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>RunRange</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Year</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Abstract</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Investigators Name</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Samples Name</string>
-      </property>
-     </column>
     </widget>
+   </item>
+   <item row="3" column="0" >
+    <layout class="QHBoxLayout" name="horizontalLayout" >
+     <item>
+      <widget class="QPushButton" name="helpButton" >
+       <property name="text" >
+        <string>Help</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4" >
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0" >
+        <size>
+         <width>527</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="closeButton" >
+       <property name="text" >
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
   <widget class="QLineEdit" name="endRunEdit" >
    <property name="geometry" >
     <rect>
-     <x>140</x>
-     <y>68</y>
-     <width>70</width>
+     <x>150</x>
+     <y>47</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
    <property name="toolTip" >
     <string>End Run Number</string>
    </property>
+   <property name="inputMask" >
+    <string/>
+   </property>
   </widget>
   <widget class="QLineEdit" name="startRunEdit" >
    <property name="geometry" >
     <rect>
      <x>59</x>
-     <y>68</y>
-     <width>70</width>
+     <y>47</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
    <property name="toolTip" >
     <string>Start Run Number</string>
    </property>
+   <property name="statusTip" >
+    <string/>
+   </property>
+   <property name="inputMask" >
+    <string/>
+   </property>
+   <property name="cursorPosition" >
+    <number>0</number>
+   </property>
   </widget>
   <widget class="QCheckBox" name="casesensitiveBox" >
    <property name="geometry" >
     <rect>
-     <x>530</x>
-     <y>104</y>
+     <x>525</x>
+     <y>84</y>
      <width>91</width>
      <height>18</height>
     </rect>
    </property>
    <property name="toolTip" >
-    <string>Case Sensitive keyWord Search</string>
+    <string/>
    </property>
    <property name="text" >
     <string>Case Sensitive</string>
@@ -211,7 +168,7 @@
    <property name="geometry" >
     <rect>
      <x>14</x>
-     <y>69</y>
+     <y>48</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -224,7 +181,7 @@
    <property name="geometry" >
     <rect>
      <x>14</x>
-     <y>104</y>
+     <y>83</y>
      <width>61</width>
      <height>20</height>
     </rect>
@@ -233,24 +190,24 @@
     <string>Instrument:</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="instrmentBox" >
+  <widget class="QComboBox" name="instrumentBox" >
    <property name="geometry" >
     <rect>
-     <x>140</x>
-     <y>104</y>
-     <width>70</width>
+     <x>150</x>
+     <y>83</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
    <property name="toolTip" >
-    <string>Instrument Box</string>
+    <string/>
    </property>
   </widget>
   <widget class="QLabel" name="keywordsLabel" >
    <property name="geometry" >
     <rect>
-     <x>450</x>
-     <y>70</y>
+     <x>447</x>
+     <y>50</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -262,8 +219,8 @@
   <widget class="QLineEdit" name="keywordslineEdit" >
    <property name="geometry" >
     <rect>
-     <x>530</x>
-     <y>70</y>
+     <x>525</x>
+     <y>47</y>
      <width>141</width>
      <height>20</height>
     </rect>
@@ -272,21 +229,27 @@
   <widget class="QLineEdit" name="enddateLineEdit" >
    <property name="geometry" >
     <rect>
-     <x>291</x>
-     <y>105</y>
-     <width>91</width>
+     <x>311</x>
+     <y>84</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="toolTip" >
+    <string>Date in DD/MM/YYYY format</string>
+   </property>
+   <property name="inputMask" >
+    <string>00/00/0000;_</string>
+   </property>
    <property name="text" >
-    <string>DD/MM/YYYY</string>
+    <string>//</string>
    </property>
   </widget>
   <widget class="QToolButton" name="startdatetoolButton" >
    <property name="geometry" >
     <rect>
-     <x>400</x>
-     <y>70</y>
+     <x>404</x>
+     <y>47</y>
      <width>25</width>
      <height>20</height>
     </rect>
@@ -298,8 +261,8 @@
   <widget class="QToolButton" name="enddatetoolButton" >
    <property name="geometry" >
     <rect>
-     <x>400</x>
-     <y>106</y>
+     <x>404</x>
+     <y>84</y>
      <width>25</width>
      <height>20</height>
     </rect>
@@ -311,21 +274,27 @@
   <widget class="QLineEdit" name="startdateLineEdit" >
    <property name="geometry" >
     <rect>
-     <x>291</x>
-     <y>69</y>
-     <width>91</width>
+     <x>310</x>
+     <y>47</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="toolTip" >
+    <string>Date in DD/MM/YYYY format</string>
+   </property>
+   <property name="inputMask" >
+    <string>00/00/0000;_</string>
+   </property>
    <property name="text" >
-    <string>DD/MM/YYYY</string>
+    <string>//</string>
    </property>
   </widget>
   <widget class="QLabel" name="enddateLabel" >
    <property name="geometry" >
     <rect>
-     <x>226</x>
-     <y>105</y>
+     <x>246</x>
+     <y>84</y>
      <width>48</width>
      <height>20</height>
     </rect>
@@ -337,8 +306,8 @@
   <widget class="QLabel" name="startdateLabel" >
    <property name="geometry" >
     <rect>
-     <x>226</x>
-     <y>69</y>
+     <x>245</x>
+     <y>48</y>
      <width>54</width>
      <height>20</height>
     </rect>
@@ -350,8 +319,8 @@
   <widget class="QPushButton" name="searchButton" >
    <property name="geometry" >
     <rect>
-     <x>689</x>
-     <y>121</y>
+     <x>660</x>
+     <y>100</y>
      <width>70</width>
      <height>23</height>
     </rect>
@@ -370,7 +339,7 @@
   <zorder>casesensitiveBox</zorder>
   <zorder>runNumberLabel</zorder>
   <zorder>instrumentLabel</zorder>
-  <zorder>instrmentBox</zorder>
+  <zorder>instrumentBox</zorder>
   <zorder>keywordsLabel</zorder>
   <zorder>keywordslineEdit</zorder>
   <zorder>startdateLabel</zorder>
@@ -382,6 +351,22 @@
   <zorder>enddateLineEdit</zorder>
   <zorder>searchButton</zorder>
  </widget>
+ <tabstops>
+  <tabstop>startRunEdit</tabstop>
+  <tabstop>endRunEdit</tabstop>
+  <tabstop>startdateLineEdit</tabstop>
+  <tabstop>startdatetoolButton</tabstop>
+  <tabstop>keywordslineEdit</tabstop>
+  <tabstop>instrumentBox</tabstop>
+  <tabstop>enddateLineEdit</tabstop>
+  <tabstop>enddatetoolButton</tabstop>
+  <tabstop>casesensitiveBox</tabstop>
+  <tabstop>searchButton</tabstop>
+  <tabstop>helpButton</tabstop>
+  <tabstop>closeButton</tabstop>
+  <tabstop>searchtreeWidget</tabstop>
+  <tabstop>searchtableWidget</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
