re #1317 - help button  handlers added for ICat user interface and some improvements to ICat user interface.

--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatAdvancedSearch.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatAdvancedSearch.ui
@@ -13,47 +13,6 @@
    <string>ICat Advanced Search</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" >
-    <widget class="QTreeWidget" name="treeWidget" >
-     <property name="maximumSize" >
-      <size>
-       <width>16777215</width>
-       <height>221</height>
-      </size>
-     </property>
-     <property name="styleSheet" >
-      <string notr="true" >background-color: rgb(216, 225, 255);</string>
-     </property>
-     <column>
-      <property name="text" >
-       <string>                                                                                                       Advanced Investigation Search</string>
-      </property>
-     </column>
-    </widget>
-   </item>
-   <item row="1" column="0" >
-    <widget class="QLabel" name="advsearchLabel" >
-     <property name="frameShape" >
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow" >
-      <enum>QFrame::Sunken</enum>
-     </property>
-     <property name="text" >
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" >
-    <widget class="QTableWidget" name="advSearchtableWidget" >
-     <property name="styleSheet" >
-      <string notr="true" >background-color: rgb(216, 225, 255);</string>
-     </property>
-     <property name="horizontalScrollBarPolicy" >
-      <enum>Qt::ScrollBarAsNeeded</enum>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0" >
     <layout class="QHBoxLayout" name="horizontalLayout" >
      <item>
@@ -84,6 +43,53 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="0" column="0" >
+    <widget class="QTreeWidget" name="treeWidget" >
+     <property name="maximumSize" >
+      <size>
+       <width>16777215</width>
+       <height>221</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string notr="true" >background-color: rgb(216, 225, 255);</string>
+     </property>
+     <column>
+      <property name="text" >
+       <string>                                                                                                       Advanced Investigation Search</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QTableWidget" name="advSearchtableWidget" >
+     <property name="styleSheet" >
+      <string notr="true" >background-color: rgb(216, 225, 255);</string>
+     </property>
+     <property name="horizontalScrollBarPolicy" >
+      <enum>Qt::ScrollBarAsNeeded</enum>
+     </property>
+     <property name="selectionMode" >
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior" >
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="advsearchLabel" >
+     <property name="frameShape" >
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+    </widget>
    </item>
   </layout>
   <widget class="QLineEdit" name="startdateLineEdit" >
