--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/MuonAnalysis.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/MuonAnalysis.ui
@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>658</width>
+    <width>579</width>
     <height>671</height>
    </rect>
   </property>
@@ -28,7 +28,7 @@
       <widget class="QWidget" name="horizontalLayoutWidget_4" >
        <property name="geometry" >
         <rect>
-         <x>510</x>
+         <x>430</x>
          <y>600</y>
          <width>123</width>
          <height>26</height>
@@ -65,7 +65,7 @@
         <rect>
          <x>10</x>
          <y>10</y>
-         <width>631</width>
+         <width>551</width>
          <height>121</height>
         </rect>
        </property>
@@ -140,19 +140,6 @@
          <string>Description:</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton_3" >
-        <property name="geometry" >
-         <rect>
-          <x>600</x>
-          <y>20</y>
-          <width>20</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text" >
-         <string>?</string>
-        </property>
-       </widget>
        <widget class="MantidQt::MantidWidgets::InstrumentSelector" name="instrSelector" >
         <property name="geometry" >
          <rect>
@@ -174,7 +161,7 @@
         <rect>
          <x>10</x>
          <y>140</y>
-         <width>631</width>
+         <width>551</width>
          <height>111</height>
         </rect>
        </property>
@@ -182,6 +169,9 @@
         <string>Data Files</string>
        </property>
        <widget class="QPushButton" name="pushButton" >
+        <property name="enabled" >
+         <bool>false</bool>
+        </property>
         <property name="geometry" >
          <rect>
           <x>10</x>
@@ -219,26 +209,13 @@
          </item>
         </layout>
        </widget>
-       <widget class="QPushButton" name="pushButton_4" >
-        <property name="geometry" >
-         <rect>
-          <x>600</x>
-          <y>20</y>
-          <width>20</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text" >
-         <string>?</string>
-        </property>
-       </widget>
       </widget>
       <widget class="QGroupBox" name="groupBox_3" >
        <property name="geometry" >
         <rect>
          <x>10</x>
          <y>260</y>
-         <width>631</width>
+         <width>551</width>
          <height>121</height>
         </rect>
        </property>
@@ -340,19 +317,6 @@
          </rect>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton_5" >
-        <property name="geometry" >
-         <rect>
-          <x>600</x>
-          <y>20</y>
-          <width>20</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text" >
-         <string>?</string>
-        </property>
-       </widget>
        <widget class="QLineEdit" name="frontAlphaNumber" >
         <property name="geometry" >
          <rect>
@@ -369,7 +333,7 @@
         <rect>
          <x>10</x>
          <y>390</y>
-         <width>631</width>
+         <width>551</width>
          <height>81</height>
         </rect>
        </property>
@@ -418,26 +382,13 @@
          </rect>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton_6" >
-        <property name="geometry" >
-         <rect>
-          <x>600</x>
-          <y>20</y>
-          <width>20</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text" >
-         <string>?</string>
-        </property>
-       </widget>
       </widget>
       <widget class="QGroupBox" name="groupBox_5" >
        <property name="geometry" >
         <rect>
          <x>10</x>
          <y>480</y>
-         <width>631</width>
+         <width>551</width>
          <height>101</height>
         </rect>
        </property>
@@ -449,11 +400,24 @@
          <rect>
           <x>10</x>
           <y>20</y>
-          <width>611</width>
+          <width>531</width>
           <height>71</height>
          </rect>
         </property>
        </widget>
+      </widget>
+      <widget class="QPushButton" name="muonAnalysisHelp" >
+       <property name="geometry" >
+        <rect>
+         <x>10</x>
+         <y>600</y>
+         <width>20</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text" >
+        <string>?</string>
+       </property>
       </widget>
      </widget>
      <widget class="QWidget" name="GroupingOptions" >
@@ -491,7 +455,7 @@
         <rect>
          <x>20</x>
          <y>400</y>
-         <width>611</width>
+         <width>531</width>
          <height>161</height>
         </rect>
        </property>
@@ -548,7 +512,7 @@
       <widget class="QLabel" name="label_5" >
        <property name="geometry" >
         <rect>
-         <x>370</x>
+         <x>300</x>
          <y>330</y>
          <width>46</width>
          <height>14</height>
@@ -561,7 +525,7 @@
       <widget class="QLabel" name="label_6" >
        <property name="geometry" >
         <rect>
-         <x>330</x>
+         <x>260</x>
          <y>570</y>
          <width>101</width>
          <height>16</height>
@@ -574,7 +538,7 @@
       <widget class="QPushButton" name="groupTablePlotButton" >
        <property name="geometry" >
         <rect>
-         <x>550</x>
+         <x>480</x>
          <y>330</y>
          <width>75</width>
          <height>24</height>
@@ -587,7 +551,7 @@
       <widget class="QPushButton" name="pairTablePlotButton" >
        <property name="geometry" >
         <rect>
-         <x>550</x>
+         <x>480</x>
          <y>570</y>
          <width>75</width>
          <height>24</height>
@@ -616,7 +580,7 @@
       <widget class="QComboBox" name="groupTablePlotChoice" >
        <property name="geometry" >
         <rect>
-         <x>430</x>
+         <x>360</x>
          <y>330</y>
          <width>111</width>
          <height>22</height>
@@ -641,7 +605,7 @@
       <widget class="QComboBox" name="pairTablePlotChoice" >
        <property name="geometry" >
         <rect>
-         <x>430</x>
+         <x>360</x>
          <y>570</y>
          <width>111</width>
          <height>22</height>
@@ -658,7 +622,7 @@
         <rect>
          <x>20</x>
          <y>100</y>
-         <width>611</width>
+         <width>531</width>
          <height>221</height>
         </rect>
        </property>
